# GeoAlgo

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  example_curve.cpp  example_nurbs.cpp  example_plot.cpp  example_power_basis.cpp  test_bernstein.cpp  test_bezier.cpp  test_horner.cpp  test_rational_bezier.cpp
include/: BezierCurve.h  GeoAlgo.h  NURBS.h  Point2D.h  PowerBasisCurve.h  PowerBasisCurve1D.h  PowerBasisCurve2D.h  PowerBasisCurve3D.h
src/: BezierCurve.cpp  GeoAlgo.cpp  NURBS.cpp  PowerBasisCurve.cpp
tests/: CMakeLists.txt  test_nurbs.cpp
